<resources>
    <string name="app_name">My Application</string>
    <string name="txt_title_login">Login</string>
    <string name="txt_title_username">Username</string>
    <string name="txt_hint_username">Username</string>
    <string name="txt_title_password">Password</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_button_sign_in">Sign-in</string>
</resources>
